# COSAN

./: .cursorignore  .gitignore  Makefile  README.md  compose.override.yaml.sample  compose.yaml
.github/: dependabot.yml
.github/workflows/: config.yml
.image/auth/: Dockerfile
.image/cosan/: Dockerfile
.image/migrator/: Dockerfile
.image/support/: Dockerfile
.image/ui/: Dockerfile
.specstory/history/: 2025-02-15_00-06-methods-in-repository-rs.md  2025-02-15_00-06-メソッド抽出とtrait作成の議論.md  2025-02-24_22-53-リポジトリのdiのための抽象化.md
ms/: go.work  go.work.sum
ms/auth/migrator/: 20241030143101.sql  atlas.sum
ms/auth/src/: go.mod  go.sum
ms/cosan/.migrator/: 20241221104111.sql  atlas.sum
ms/cosan/cosan/: Cargo.toml
ms/cosan/cosan/lib/: Cargo.toml
ms/cosan/cosan/lib/.specstory/history/: 2025-02-27_23-33-resolving-axum-handler-trait-errors.md
ms/cosan/cosan/lib/src/: domain.rs  router.rs
ms/cosan/cosan/lib/src/.specstory/history/: 2025-02-24_22-37-rust-trait-implementation-issues.md  2025-02-24_22-37-ファイルエラーの詳細確認.md  2025-02-24_23-11-resolving-`impl-trait`-limitations-in-rust.md  2025-02-24_23-11-resolving-rust-trait-object-errors.md  2025-02-25_21-38-resolving-axum-handler-trait-error.md  2025-02-25_21-43-解決策-axum-ルーターのエラー修正.md  2025-02-25_21-45-axumハンドラの実装修正.md  2025-02-25_23-02-rust-cosaservice-trait-implementation.md  2025-02-25_23-54-リファクタリングの提案.md  2025-02-25_23-56-axum-token-extraction-refactoring.md
ms/cosan/cosan/lib/src/domain/: entity.rs  interface.rs  service.rs
ms/cosan/cosan/lib/src/driver/: database.rs  model.rs  repository.rs
ms/cosan/cosan/lib/src/router/: interface.rs  middleware.rs  request.rs  response.rs  router.rs
ms/dev/: auth_test.sh  fmt.sh  key.sh  test.sh
ms/dev/test/: auth_test.sh  support_test.sh
ms/support/support/: Cargo.toml
ms/support/support/lib/: Cargo.toml
ms/support/support/lib/src/: driver.rs  lib.rs  util.rs
ms/support/support/lib/src/domain/: entity.rs  service.rs
ms/support/support/lib/src/driver/: database.rs  model.rs  repository.rs
ms/support/support/lib/src/router/: request.rs  response.rs  router.rs
ms/support/support/lib/src/util/: auth.rs  crypt.rs  slog.rs  verificator.rs
ms/support/support/src/: main.rs
ms/support/support/src/driver/: driver.rs
ms/support/support/src/router/: router.rs
ms/ui/: fresh.gen.ts
(+81 files in other folders)
