[package]
name = "support"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.4", features = ["trace"] } # 必要な機能を features で指定
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }