[package]
edition = "2021"
name = "lib"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
axum = "0.8.1"
bcrypt = "0.17"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15"
jsonwebtoken = "9.3.1"
regex = "1"
serde = {version = "1.0", features = ["derive"]}
slog = {version = "2", features = ["max_level_trace", "release_max_level_debug"]}
slog-async = "2"
slog-json = "2"
sqlx = {version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"]}
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.6.2", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["json"]}
