[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.4", features = ["trace"] }
anyhow = "1.0"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres"] } 
dotenv = "0.15"
slog = { version = "2", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2"
slog-json = "2"
slog-async = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
bcrypt = "0.11"